fix openapi names
