# openapi/openapi_nodev1.json
@@ -23,18 +23,45 @@
     "/stakeholders/node/cache/schemas/v1" : {
       "get" : {
         "tags" : [ "Cache" ],
-        "summary" : "Get selected key of cache v1 config",
+        "summary" : "Get selected key of {stakeholder} cache v1 config",
         "operationId" : "cache",
         "parameters" : [ {
           "name" : "refresh",
           "in" : "query",
           "description" : "to force the refresh of the cache",
           "required" : false,
+          "deprecated" : true,
           "schema" : {
             "type" : "boolean"
           }
         } ],
         "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ConfigDataV1"
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Service unavailable",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            }
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
           "400" : {
             "description" : "Bad Request",
             "content" : {
@@ -47,32 +74,6 @@
           },
           "401" : {
             "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Forbidden"
-          },
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "500" : {
-            "description" : "Service unavailable",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ConfigDataV1"
-                }
-              }
-            }
           }
         },
         "security" : [ {
@@ -83,9 +84,38 @@
     "/stakeholders/node/cache/schemas/v1/id" : {
       "get" : {
         "tags" : [ "Cache" ],
-        "summary" : "Get last v1 cache version",
+        "summary" : "Get last v1 {stakeholder} cache version",
         "operationId" : "idV1",
         "responses" : {
+          "500" : {
+            "description" : "Service unavailable",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            }
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/CacheVersion"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Not Found"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
           "400" : {
             "description" : "Bad Request",
             "content" : {
@@ -98,35 +128,6 @@
           },
           "401" : {
             "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Forbidden"
-          },
-          "404" : {
-            "description" : "Not Found"
-          },
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "500" : {
-            "description" : "Service unavailable",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/CacheVersion"
-                }
-              }
-            }
           }
         },
         "security" : [ {
@@ -137,28 +138,6 @@
   },
   "components" : {
     "schemas" : {
-      "ProblemJson" : {
-        "type" : "object",
-        "properties" : {
-          "title" : {
-            "type" : "string",
-            "description" : "A short, summary of the problem type. Written in english and readable for engineers (usually not suited for non technical stakeholders and not localized); example: Service Unavailable"
-          },
-          "status" : {
-            "maximum" : 600,
-            "minimum" : 100,
-            "type" : "integer",
-            "description" : "The HTTP status code generated by the origin server for this occurrence of the problem.",
-            "format" : "int32",
-            "example" : 200
-          },
-          "detail" : {
-            "type" : "string",
-            "description" : "A human readable explanation specific to this occurrence of the problem.",
-            "example" : "There was an error processing the request"
-          }
-        }
-      },
       "BrokerCreditorInstitution" : {
         "required" : [ "broker_code", "enabled", "extended_fault_bean" ],
         "type" : "object",
@@ -1001,6 +980,28 @@
           "timeout_c" : {
             "type" : "integer",
             "format" : "int64"
+          }
+        }
+      },
+      "ProblemJson" : {
+        "type" : "object",
+        "properties" : {
+          "title" : {
+            "type" : "string",
+            "description" : "A short, summary of the problem type. Written in english and readable for engineers (usually not suited for non technical stakeholders and not localized); example: Service Unavailable"
+          },
+          "status" : {
+            "maximum" : 600,
+            "minimum" : 100,
+            "type" : "integer",
+            "description" : "The HTTP status code generated by the origin server for this occurrence of the problem.",
+            "format" : "int32",
+            "example" : 200
+          },
+          "detail" : {
+            "type" : "string",
+            "description" : "A human readable explanation specific to this occurrence of the problem.",
+            "example" : "There was an error processing the request"
           }
         }
       },
