# src/main/java/it/gov/pagopa/apiconfig/cache/controller/CacheController.java
@@ -36,7 +36,7 @@ public abstract class CacheController {
   @Autowired private RefreshController refreshController;
 
   @Operation(
-      summary = "Get selected key of cache v1 config",
+      summary = "Get selected key of {stakeholder} cache v1 config",
       security = {@SecurityRequirement(name = "ApiKey")},
       tags = {
         "Cache",
@@ -80,7 +80,7 @@ public abstract class CacheController {
   @GetMapping(
       value = "/v1",
       produces = {MediaType.APPLICATION_JSON_VALUE})
-  public ResponseEntity<ConfigDataV1> cache(@RequestParam @Parameter(description = "to force the refresh of the cache") Optional<Boolean> refresh)
+  public ResponseEntity<ConfigDataV1> cache(@Deprecated @RequestParam @Parameter(description = "to force the refresh of the cache") Optional<Boolean> refresh)
       throws IOException {
       if(refresh.orElse(false)){
           log.warn("Deprecated refresh from nodo,change this to call /cache/refresh");
@@ -100,7 +100,7 @@ public abstract class CacheController {
   }
 
   @Operation(
-      summary = "Get last v1 cache version",
+      summary = "Get last v1 {stakeholder} cache version",
       security = {@SecurityRequirement(name = "ApiKey")},
       tags = {
         "Cache",
